# preconditioned-deformation-grids

./: .gitignore  .gitmodules  Main.py  README.md  example.py  pyproject.toml  run.py
configs/io/: io_dfaust.json
configs/method/: fit.json
configs/method/ablations/grid_levels/1/: fit.json  run.py
configs/method/ablations/grid_levels/10/: fit.json  run.py
configs/method/ablations/grid_levels/12/: fit.json  run.py
configs/method/ablations/grid_levels/2/: fit.json  run.py
configs/method/ablations/grid_levels/4/: fit.json  run.py
configs/method/ablations/grid_levels/6/: fit.json  run.py
configs/method/ablations/grid_levels/8/: fit.json  run.py
configs/method/ablations/initialization/first_keyframe/: diffusion_init.py  our_init.py  our_init_ama.py  tetra_init.py  tetra_init_ama.py
configs/method/ablations/initialization/middle_keyframe/: diffusion_init.py  our_init.py  our_init_ama.py  tetra_init.py  tetra_init_ama.py
configs/method/ablations/initialization/our_keyframe/: diffusion_init.py  our_init.py  our_init_ama.py  tetra_init.py  (+1 more)
configs/method/runs/: run_ama.py  run_dfaust.py  run_dt4d.py  run_vci.py
src/: opt_run.py  optimization.py
src/geometry/: geometry.py  grid.py  preconditioning.py
src/io/: initialization.py  log.py  marching_tet.py
src/io/datasets/: existing.py  optimization_dataset.py  process_ama_dataset.py  process_dfaust_dataset.py  process_dt4d_dataset.py
src/pcgrid/: grid.py  optimization_values.py  solver.py  utils.py  value_wrapper.py
src/pcgrid/grid/: grid.py
src/utilities/: loss.py  loss_f.py  util.py
(+40 files in other folders)
